--- a/trunk/template/simple2/postnewtopic.htm
+++ b/trunk/template/simple2/postnewtopic.htm
@@ -27,6 +27,7 @@ $(function(){
 </tr>
 </table><br />
 
+<!-- Similar Topic results. -->
 <div style="display:none;" id="div_notice">
 	<div class="ui-widget">
 		<div class="ui-state-highlight ui-corner-all" style="margin-top: 20px; padding: 0 .7em;">
