--- a/trunk/template/simple2/profile.htm
+++ b/trunk/template/simple2/profile.htm
@@ -1,8 +1,9 @@
 <br /><div class="ui-widget-content"><a href="index.php">{TITLE}</a> &#187; {LANG-TITLE}</div><br />
 
 <script type="text/javascript" src="includes/js/sammy-0.6.3.min.js"></script>
-<script type="text/javascript" src="includes/js/pm.ajax.js"></script>
 <script type="text/javascript" src="includes/js/ucp.ajax.js"></script>
+
+<div id="moreSmiles"></div>
 
 	<script type="text/javascript">
 	$(function(){
@@ -82,7 +83,7 @@
 				<h3><a href="#">{LANG-PMMENU}</a></h3>
 				<div>
 					<ul>
-						<li><a href="Profile.php#/PM/write">{LANG-NEWPM}</a></li>
+						<li><a href="Profile.php#/PM/compose">{LANG-NEWPM}</a></li>
 						<li><a href="Profile.php#/PM/Inbox">{LANG-PM-INBOX} ({NEW-PM-COUNT})</a></li>
 						<li><a href="Profile.php#/PM/Outbox">{LANG-PM-OUTBOX}</a></li>
 						<li><a href="Profile.php#/PM/Archive">{LANG-PM-ARCHIVE}</a></li>
