--- a/trunk/template/simple2/top.htm
+++ b/trunk/template/simple2/top.htm
@@ -43,11 +43,11 @@
 </tr><tr>
 
 <!-- START admin -->
-<td class="ui-widget-content">{LANG-WELCOME} <b>{LOGGEDUSER}</b> [<a href="login.php?mode=logout">{LANG-LOGOUT}</a>]<br /><a href="PM.php">{NEWPM}</a><br /><a href="acp/index.php">{LANG-CP}</a><br /><a href="Search.php?action=newposts">{LANG-NEWPOSTS}</a></td>
+<td class="ui-widget-content">{LANG-WELCOME} <b>{LOGGEDUSER}</b> [<a href="login.php?mode=logout">{LANG-LOGOUT}</a>]<br /><a href="Profile.php#/PM/Inbox">{NEWPM}</a><br /><a href="acp/index.php">{LANG-CP}</a><br /><a href="Search.php?action=newposts">{LANG-NEWPOSTS}</a></td>
 <!-- END admin -->
 
 <!-- START user -->
-<td class="ui-widget-content">{LANG-WELCOME} <b>{LOGGEDUSER}</b> [<a href="login.php?mode=logout">{LANG-LOGOUT}</a>]<br /><a href="PM.php">{NEWPM}</a><br /><a href="Search.php?action=newposts">{LANG-NEWPOSTS}</td>
+<td class="ui-widget-content">{LANG-WELCOME} <b>{LOGGEDUSER}</b> [<a href="login.php?mode=logout">{LANG-LOGOUT}</a>]<br /><a href="Profile.php#/PM/Inbox">{NEWPM}</a><br /><a href="Search.php?action=newposts">{LANG-NEWPOSTS}</td>
 <!-- END user -->
 
 <!-- START guest -->
