--- a/trunk/template/simple2/bbcode.css
+++ b/trunk/template/simple2/bbcode.css
@@ -182,3 +182,184 @@
 .bbcode .preview a {
 	background-image:url(../../template/simple2/images/preview.png);
 }
+
+/*
+limited bbcode for non-topic textareas.
+*/
+
+.limitedbbcode .markItUpButton1 a	{
+	background-image:url(../../template/simple2/images/bold.png);
+}
+.limitedbbcode .markItUpButton2 a	{
+	background-image:url(../../template/simple2/images/italic.png);
+}
+.limitedbbcode .markItUpButton3 a	{
+	background-image:url(../../template/simple2/images/underline.png);
+}
+
+.limitedbbcode .markItUpButton4 a	{
+	background-image:url(../../template/simple2/images/subscript.png);
+}
+.limitedbbcode .markItUpButton5 a	{
+	background-image:url(../../template/simple2/images/superscript.png);
+}
+
+.limitedbbcode .markItUpButton6 a	{
+	background-image:url(../../template/simple2/images/picture.png);
+}
+.limitedbbcode .markItUpButton7 a	{
+	background-image:url(../../template/simple2/images/link.png);
+}
+
+.limitedbbcode .markItUpButton8 a {
+	background-image:url(../../template/simple2/images/colors.png);
+}
+
+	.limitedbbcode .markItUpButton8 ul {
+		width:81px;
+		padding:1px;
+	}
+	.limitedbbcode .markItUpButton8  li {
+		border:1px solid white;
+		width:25px;	height:25px;
+		overflow:hidden;
+		padding:0px; margin:0px;
+		float:left;
+	}
+	.limitedbbcode .markItUpButton8 ul a {
+		width:25px;	height:25px;
+	}
+	.limitedbbcode .markItUpButton8 ul a:hover {
+		background-color:none;
+	}
+
+	.limitedbbcode .markItUpButton8 .col1-1 a {
+		background:#FCE94F;
+	}
+	.limitedbbcode .markItUpButton8 .col1-2 a {
+		background:#EDD400;
+	}
+	.limitedbbcode .markItUpButton8 .col1-3 a {
+		background:#C4A000;
+	}
+
+	.limitedbbcode .markItUpButton8 .col2-1 a {
+		background:#FCAF3E;
+	}
+	.limitedbbcode .markItUpButton8 .col2-2 a {
+		background:#F57900;
+	}
+	.limitedbbcode .markItUpButton8 .col2-3 a {
+		background:#CE5C00;
+	}
+
+	.limitedbbcode .markItUpButton8 .col3-1 a {
+		background:#E9B96E;
+	}
+	.limitedbbcode .markItUpButton8 .col3-2 a {
+		background:#C17D11;
+	}
+	.limitedbbcode .markItUpButton8 .col3-3 a {
+		background:#8F5902;
+	}
+
+	.limitedbbcode .markItUpButton8 .col4-1 a {
+		background:#8AE234;
+	}
+	.limitedbbcode .markItUpButton8 .col4-2 a {
+		background:#73D216;
+	}
+	.limitedbbcode .markItUpButton8 .col4-3 a {
+		background:#4E9A06;
+	}
+
+	.limitedbbcode .markItUpButton8 .col5-1 a {
+		background:#729FCF;
+	}
+	.limitedbbcode .markItUpButton8 .col5-2 a {
+		background:#3465A4;
+	}
+	.limitedbbcode .markItUpButton8 .col5-3 a {
+		background:#204A87;
+	}
+
+	.limitedbbcode .markItUpButton8 .col6-1 a {
+		background:#AD7FA8;
+	}
+	.limitedbbcode .markItUpButton8 .col6-2 a {
+		background:#75507B;
+	}
+	.limitedbbcode .markItUpButton8 .col6-3 a {
+		background:#5C3566;
+	}
+
+	.limitedbbcode .markItUpButton8 .col7-1 a {
+		background:#EF2929;
+	}
+	.limitedbbcode .markItUpButton8 .col7-2 a {
+		background:#CC0000;
+	}
+	.limitedbbcode .markItUpButton8 .col7-3 a {
+		background:#A40000;
+	}
+
+	.limitedbbcode .markItUpButton8 .col8-1 a {
+		background:#FFFFFF;
+	}
+	.limitedbbcode .markItUpButton8 .col8-2 a {
+		background:#D3D7CF;
+	}
+	.limitedbbcode .markItUpButton8 .col8-3 a {
+		background:#BABDB6;
+	}
+
+	.limitedbbcode .markItUpButton8 .col9-1 a {
+		background:#888A85;
+	}
+	.limitedbbcode .markItUpButton8 .col9-2 a {
+		background:#555753;
+	}
+	.limitedbbcode .markItUpButton8 .col9-3 a {
+		background:#000000;
+	}
+
+.limitedbbcode .markItUpButton9 a	{
+	background-image:url(../../template/simple2/images/fonts.png);
+}
+
+.limitedbbcode .markItUpButton10 a	{
+	background-image:url(../../template/simple2/images/alignment.png);
+}
+
+.limitedbbcode .markItUpButton11 a	{
+	background-image:url(../../template/simple2/images/list-bullet.png);
+}
+.limitedbbcode .markItUpButton12 a	{
+	background-image:url(../../template/simple2/images/list-numeric.png);
+}
+.limitedbbcode .markItUpButton13 a	{
+	background-image:url(../../template/simple2/images/list-item.png);
+}
+
+.limitedbbcode .markItUpButton14 a	{
+	background-image:url(../../template/simple2/images/quotes.png);
+}
+.limitedbbcode .markItUpButton15 a	{
+	background-image:url(../../template/simple2/images/code.png);
+}
+
+.limitedbbcode .markItUpButton16 a{
+	background-image:url(../../template/simple2/images/youtube.png);
+}
+
+.limitedbbcode .markItUpButton17 a	{
+	background-image:url(../../template/simple2/images/clean.png);
+}
+
+.limitedbbcode .spellChk a{
+	background-image:url(../../template/simple2/images/spell-check.png);
+}
+
+.limitedbbcode .preview a {
+	background-image:url(../../template/simple2/images/preview.png);
+}
