* Upgraded jQuery to 1.6.2 * Upgraded jQuery UI to 1.8.14 * Fixed issue with searching for posts * Fixed issues discovered during testing * Improved CAPTCHA by making questions more direct

--- a/trunk/template/simple2/cp-mainmenu.htm
+++ b/trunk/template/simple2/cp-mainmenu.htm
@@ -1,5 +1,4 @@
 <br /><div class="ui-widget-content"><a href="../index.php">{TITLE}</a> &#187; {LANG-TITLE}</div><br />
-<p class="ui-widget-content">{LANG-WELCOME}</p>
 
 <table border="0" class="table" cellspacing="1" cellpadding="1">
 <tr>
@@ -19,6 +18,7 @@
 <div id="settings" class="anylinkcss">
 <a href="acpsettings.php?section=user">{LANG-USERSETTINGS}</a>
 <a href="acpsettings.php?section=board">{LANG-BOARDSETTINGS}</a>
+<a href="acpsettings.php?section=announcements">{LANG-ANNOUNCEMENTSETTINGS}</a>
 <a href="acpsettings.php?section=mail">{LANG-MAILSETTINGS}</a>
 <a href="acpsettings.php?section=cookie">{LANG-COOKIESETTINGS}</a>
 <a href="acpsettings.php?section=attachment">{LANG-ATTACHMENTSETTINGS}</a>
