--- a/trunk/template/simple2/acp_header.htm
+++ b/trunk/template/simple2/acp_header.htm
@@ -6,21 +6,23 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 <title>{TITLE}  - {PAGETITLE}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" type="text/css" href="../template/simple2/style.css" />
-<link rel="stylesheet" type="text/css" href="../template/simple2/ui.css" />
+<link rel="stylesheet" type="text/css" href="../template/simple2/jui.css" />
 <link rel="shortcut icon" href="../template/simple2/images/favicon.ico" />
 
 <!-- JAVASCRIPT FILES -->
 
 <!-- Language JS File. -->
-<script type="text/javascript" src="lang/{LANG}.lang.js"></script>
+<script type="text/javascript" src="../lang/{LANG}.lang.js"></script>
 
 <!-- REQUIRED, CORE -->
-<script type="text/javascript" src="includes/js/jquery-1.5.1.min.js"></script>
-<script src="includes/js/jquery-ui-1.8.11.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="../includes/js/jquery-1.6.2.min.js"></script>
+<script src="../includes/js/jquery-ui-1.8.14.min.js" type="text/javascript"></script>
 
 <!-- PLUGINS USED ALL AROUND EBB -->
-<script type="text/javascript" src="includes/js/dialog.js"></script>
-<script type="text/javascript" src="includes/js/common.js"></script>
+<script type="text/javascript" src="../includes/js/dialog.js"></script>
+<script type="text/javascript" src="../includes/js/common.js"></script>
+
+<script type="text/javascript" src="../acp/anylink.js" ></script>
 
 <!-- /JAVASCRIPT FILES -->
 </head>
@@ -32,6 +34,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 <p>{LANG-JSDISABLED}</p>
 </div>
 </noscript>
+
+<!-- Used to confirm actions (will replace older method) -->
+<div id="confirmDlg">
+	<div id="confirmMsg"></div>
+</div>
 
 <!-- Code for help panel -->
 <div id="help" style="display:none">
