--- a/trunk/template/simple2/cp-login.htm
+++ b/trunk/template/simple2/cp-login.htm
@@ -1,4 +1,4 @@
-<br /><div class="td2"><a href="../index.php">{TITLE}</a> &#187; {LANG-TITLE}</div><br />
+<br /><div class="ui-widget-content"><a href="../index.php">{TITLE}</a> &#187; {LANG-TITLE}</div><br />
 
 <form method="post" action="acp_login.php?action=auth">
 <table border="0" class="table" cellspacing="1" cellpadding="1">
