--- a/trunk/template/simple2/cp-mailsettings.htm
+++ b/trunk/template/simple2/cp-mailsettings.htm
@@ -9,13 +9,23 @@
 <td class="ui-widget-content">{LANG-MAILTYPE}</td>
 <td class="ui-widget-content">
 <!-- START smtp -->
-<input type="radio" name="mail_type" value="0" class="text" checked=checked />{LANG-SMTP} <input type="radio" name="mail_type" value="1" class="text" />{LANG-MAIL}
+<input type="radio" name="mail_type" value="0" checked=checked />{LANG-SMTP} <input type="radio" name="mail_type" value="2" />{LANG-SENDMAIL} <input type="radio" name="mail_type" value="1" />{LANG-MAIL}
 <!-- END smtp -->
 
+<!-- START sendmail -->
+<input type="radio" name="mail_type" value="0" checked=checked />{LANG-SMTP} <input type="radio" name="mail_type" value="2" checked=checked />{LANG-SENDMAIL} <input type="radio" name="mail_type" value="1" />{LANG-MAIL}
+<!-- END sendmail -->
+
 <!-- START mail -->
-<input type="radio" name="mail_type" value="0" class="text" />{LANG-SMTP} <input type="radio" name="mail_type" value="1" class="text" checked=checked />{LANG-MAIL}
+<input type="radio" name="mail_type" value="0" />{LANG-SMTP} <input type="radio" name="mail_type" value="2" />{LANG-SENDMAIL} <input type="radio" name="mail_type" value="1" checked=checked />{LANG-MAIL}
 <!-- END mail -->
 </td>
+</tr><tr>
+<td class="ui-widget-content">{LANG-MAILANTIFLOOD}</td>
+<td class="ui-widget-content"><input type="text" name="mail_antiflood" size="30" value="{FLOODCOUNT}" class="text" id="mailantiflood" onblur="validateNumeric('mailantiflood', 'mailantiflooderr');" /><div id="mailantiflooderr"></div></td>
+</tr><tr>
+<td class="ui-widget-content">{LANG-SENDMAILPATH}</td>
+<td class="ui-widget-content"><input type="text" name="sendmail_path" size="30" value="{SENDMAILPATH}" class="text" id="sendmailPath" onblur="validateNotNull('sendmailPath', 'sendmailPatherr');" /><div id="sendmailPatherr"></div></td>
 </tr><tr>
 <td class="ui-widget-content">{LANG-HOST}</td>
 <td class="ui-widget-content"><input type="text" name="smtp_host" size="30" value="{HOST}" class="text" id="smtphost" onblur="validateNotNull('smtphost', 'smtphosterr');" /><div id="smtphosterr"></div></td>
@@ -28,6 +38,21 @@
 </tr><tr>
 <td class="ui-widget-content">{LANG-PASSWORD}</td>
 <td class="ui-widget-content"><input type="text" name="smtp_pass" size="30" value="{PASSWORD}" class="text" id="smtppwd" onblur="validateNotNull('smtppwd', 'smtppwderr');" /><div id="smtppwderr"></div></td>
+</tr><tr>
+<td class="ui-widget-content">{LANG-SMTPENCRYPTION}<a href="#" class="hint">[?]<span>{LANG-ENCRPTION-HINT}</span></a></td>
+<td class="ui-widget-content">
+<!-- START smtp_encrypt_ssl -->
+<input type="radio" name="encrption_type" value="ssl" checked=checked />{LANG-SMTP-SSL} <input type="radio" name="encrption_type" value="tls" />{LANG-SMTP-TLS} <input type="radio" name="encrption_type" value="" />{LANG-SMTP-NONE}
+<!-- END smtp_encrypt_ssl -->
+
+<!-- START smtp_encrypt_tls -->
+<input type="radio" name="encrption_type" value="ssl" />{LANG-SMTP-SSL} <input type="radio" name="encrption_type" value="tls" checked=checked />{LANG-SMTP-TLS} <input type="radio" name="encrption_type" value="" />{LANG-SMTP-NONE}
+<!-- END smtp_encrypt_tls -->
+
+<!-- START smtp_encrypt_none -->
+<input type="radio" name="encrption_type" value="ssl" />{LANG-SMTP-SSL} <input type="radio" name="encrption_type" value="tls" />{LANG-SMTP-TLS} <input type="radio" name="encrption_type" value="" checked=checked />{LANG-SMTP-NONE}
+<!-- END smtp_encrypt_none -->
+</td>
 </tr><tr>
 <td colspan="2" align="center" class="ui-widget-header"><input type="submit" Value="{LANG-SAVESETTINGS}" class="submit"></td>
 </tr>
