--- a/trunk/template/simple2/gallery-body.htm
+++ b/trunk/template/simple2/gallery-body.htm
@@ -1,4 +1,4 @@
 <td class="ui-widget-header" align="center">
-<img src="images/avatar/{FILE}" alt="{FILE}" title="{FILE}" /><br />
-<input type="radio" name="avatar" value="images/avatar/{FILE}" class="text" />
+<img src="images/avatar/{FILE}" alt="{FILE}" title="{BOARD-ADDR}/images/avatar/{FILE}" /><br />
+<input type="radio" name="avatar" value="{BOARD-ADDR}/images/avatar/{FILE}" class="text" />
 </td>
