added better clarification to settings form in installer.

--- a/trunk/template/simple2/installer-config-board.htm
+++ b/trunk/template/simple2/installer-config-board.htm
@@ -53,7 +53,7 @@ Cookie Secure<a href="#" class="hint">[?]<span>Must have SSL on your server to u
 Mail Type<br />
 <input type="radio" name="mail_type" value="0" />SMTP <input type="radio" name="mail_type" value="2" />Sendmail <input type="radio" name="mail_type" value="1" />Mail() method
 <hr />
-Mail Anti-flood<br />
+Mail Anti-flood (In Seconds)<br />
 <input type="text" name="mail_antiflood" size="30" class="text" />
 <hr />
 Sendmail Path<br />
