Resolved issue where a reply could not get deleted and improved cleaning after deletion. move spam check further down after we check for null values.

--- a/trunk/template/simple2/replylisting.htm
+++ b/trunk/template/simple2/replylisting.htm
@@ -16,7 +16,7 @@
 <!-- END edit -->
 
 <!-- START delete -->
-<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=delPost&bid={BID}&amp;tid={TID}&amp;pid={POSTID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
+<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deletePost&bid={BID}&tid={TID}&pid={POSTID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
 <!-- END delete -->
 
 <!-- START quote -->
