--- a/trunk/template/simple2/viewtopic.htm
+++ b/trunk/template/simple2/viewtopic.htm
@@ -46,7 +46,7 @@
 <!-- END edit -->
 
 <!-- START delete -->
-<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deleteTopic&amp;bid={BID}&amp;tid={TID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
+<a href="#" onclick="confirmDlg('{LANG-DELPROMPT}', '{BOARDDIR}/delete.php?action=deleteTopic&bid={BID}&tid={TID}');return false;"><img src="template/simple2/images/delete.gif" border="0" alt="" /></a>
 <!-- END delete -->
 
 <!-- START quote -->
