set normal as default on new topic form

--- a/RC1/template/simple2/postnewtopic.htm
+++ b/RC1/template/simple2/postnewtopic.htm
@@ -132,7 +132,7 @@ $(function(){
 <div class="pContent">
 <a href="#editor" class="toggle"><span>{LANG-DISABLERTF}</span></a> -  <a href="#smiles" onclick="$('#moreSmiles').dialog('open');">{LANG-SMILES}</a><br />
 <!-- START important -->
-{LANG-POSTTYPE}:&nbsp;<input type="radio" name="post_type" value="1" />{LANG-IMPORTANT}&nbsp;<input type="radio" name="post_type" value="0" />{LANG-NORMAL}
+{LANG-POSTTYPE}:&nbsp;<input type="radio" name="post_type" value="1" />{LANG-IMPORTANT}&nbsp;<input type="radio" name="post_type" value="0" checked=checked />{LANG-NORMAL}
 <!-- END important -->
 
 <!-- START normal -->
