upgraded Twig library got viewboard view completed made SQL calls able to be used on different DBMS

--- a/trunk/application/views/simple2/board_index.twig
+++ b/trunk/application/views/simple2/board_index.twig
@@ -1,6 +1,6 @@
 {% extends "/simple2/master.twig" %}
 
-{% block title %}{{pageTitle}} - Index{% endblock %}
+{% block title %}{{boardName}} - {{pageTitle}}{% endblock %}
 
 {% block bodyRender %}
 
