--- a/trunk/application/views/simple2/register.twig
+++ b/trunk/application/views/simple2/register.twig
@@ -1,6 +1,6 @@
 {% extends "/simple2/master.twig" %}
 
-{% block title %}{{boardName}} - {{LANG_PWDRECOVER}}{% endblock %}
+{% block title %}{{boardName}} - {{LANG_REGISTER}}{% endblock %}
 
 {% block bodyRender %}
 
@@ -24,67 +24,76 @@ $(document).ready(function(){
 	jQuery('#captchaReload').captchaRefresh({src: 'includes/captchaEngine.php'});
 });
 </script>
-<br /><div class="ui-widget-content"><a href="index.php">{TITLE}</a> &#187; {LANG-TITLE}</div><br />
 
 {{REGISTERFORM|raw}}
 <table border="0" class="table" cellspacing="1" cellpadding="1">
 <tr>
-<td colspan="2" class="ui-widget-header" align="center">{LANG-TITLE}</td>
+<td colspan="2" class="ui-widget-header" align="center">{{LANG_REGISTER}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{LANG-EMAIL}</td>
+<td class="ui-widget-content" width="50%">{{LANG_EMAIL}}</td>
 <td class="ui-widget-content" width="50%"><input name="email" type="text" size="30" maxlength="255" class="text" id="email" onblur="validateEmail('email', 'emailerr');" /><div id="emailerr"></div></td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{LANG-USERNAME}<a href="#" class="hint">[?]<span>{LANG-RULE}</span></a></td>
+<td class="ui-widget-content" width="50%">{{LANG_USERNAME}}<a href="#" class="hint">[?]<span>{{LANG_RULE}}</span></a></td>
 <td class="ui-widget-content" width="50%"><input name="username" type="text" size="30" maxlength="25" class="text" id="usr" onblur="validateAlphaNumeric('usr', 'usrerr');" /><div id="usrerr"></div></td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{LANG-PASSWORD}</td>
+<td class="ui-widget-content" width="50%">{{LANG_PASSWORD}}</td>
 <td class="ui-widget-content" width="50%"><input name="password" type="password" size="30" class="text" id="pwd" onblur="validateNotNull('pwd', 'pwderr');" /><div id="pwderr"></div>
 <div id="passwordStrengthRes" class="pwd0"></div></td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{LANG-CORNFIRMPASSWORD}</td>
+<td class="ui-widget-content" width="50%">{{LANG_CONFIRMPWD}}</td>
 <td class="ui-widget-content" width="50%"><input name="vert_password" type="password" size="30" class="text" id="vpass" onblur="validateAlphaNumeric('vpass', 'vpasserr');" /><div id="vpasserr"></div></td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{LANG-TIME}</td>
+<td class="ui-widget-content" width="50%">{{LANG_TIME}}</td>
 <td class="ui-widget-content" width="50%">{TIME}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{LANG-TIMEFORMAT}<a href="#" class="hint">[?]<span>{LANG-TIMEINFO}</span></a></td>
-<td class="ui-widget-content" width="50%"><input type="text" name="time_format" value="{TIMEFORMAT}" size="30" maxlength="14" class="text" id="timeform" onblur="validateAlphaNumeric('timeform', 'timeformerr');" /><div id="timeformerr"></div></td>
+<td class="ui-widget-content" width="50%">{{LANG_TIMEFORMAT}}<a href="#" class="hint">[?]<span>{{LANG_TIMEINFO}}</span></a></td>
+<td class="ui-widget-content" width="50%"><input type="text" name="time_format" value="{{TIMEFORMAT}}" size="30" maxlength="14" class="text" id="timeform" onblur="validateAlphaNumeric('timeform', 'timeformerr');" /><div id="timeformerr"></div></td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{LANG-PMNOTIFY}</td>
-<td class="ui-widget-content" width="50%"><input type="radio" name="pm_notice" value="1" />{LANG-YES} <input type="radio" name="pm_notice" value="0" />{LANG-NO}</td>
+<td class="ui-widget-content" width="50%">{{LANG_PMNOTIFY}}</td>
+<td class="ui-widget-content" width="50%"><input type="radio" name="pm_notice" value="1" />{{LANG_YES}} <input type="radio" name="pm_notice" value="0" />{{LANG_NO}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{LANG-SHOWEMAIL}</td>
-<td class="ui-widget-content" width="50%"><input type="radio" name="show_email" value="0" />{LANG-YES} <input type="radio" name="show_email" value="1" />{LANG-NO}</td>
+<td class="ui-widget-content" width="50%">{{LANG_SHOWEMAIL}}</td>
+<td class="ui-widget-content" width="50%"><input type="radio" name="show_email" value="0" />{{LANG_YES}} <input type="radio" name="show_email" value="1" />{{LANG_NO}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{LANG-STYLE}</td>
-<td class="ui-widget-content" width="50%">{STYLE}</td>
+<td class="ui-widget-content" width="50%">{{LANG_STYLE}}</td>
+<td class="ui-widget-content" width="50%">{{STYLE|raw}}</td>
 </tr><tr>
-<td class="ui-widget-content" width="50%">{LANG-LANGUAGE}</td>
-<td class="ui-widget-content" width="50%">{LANGUAGE}</td>
+<td class="ui-widget-content" width="50%">{{LANG_LANGUAGE}}</td>
+<td class="ui-widget-content" width="50%">{{LANGUAGE|raw}}</td>
 </tr>
 <!-- START captcha -->
 <tr>
-<td class="ui-widget-content" width="50%">{LANG-CAPTCHA}<a href="#" class="hint">[?]<span>{LANG-CAPTCHAHELP}</span></a></td>
-<td class="ui-widget-content" width="50%"><input type="text" name="captcha" size="10" class="text" id="captcha" onblur="validateAlphaNumeric('captcha', 'captchaerr');" />&nbsp;<div id="captchaReload"><img src="includes/captchaEngine.php" id="captchaImg" alt="{LANG-RELOAD}" title="{LANG-RELOAD}" /></div>
+<td class="ui-widget-content" width="50%">{{LANG_CAPTCHA}}<a href="#" class="hint">[?]<span>{{LANG_CAPTCHAHELP}}</span></a></td>
+<td class="ui-widget-content" width="50%">
+	<input type="text" name="captcha" size="10" class="text" id="captcha" onblur="validateAlphaNumeric('captcha', 'captchaerr');" />&nbsp;<strong>{{CAPTCHA}}</strong>
 <div id="captchaerr"></div></td>
 </tr>
 <!-- END captcha -->
 
-<!-- START rules -->
+{%if PREF_RULES == 1%}
 <tr>
 <td colspan="2" class="ui-widget-content" align="center">
-<textarea name="tos_msg" rows="5" cols="40" class="text" readonly=readonly>{RULES}</textarea><br />
-<input name="iagree" type="checkbox" value="yes" /><b>{LANG-AGREE}</b></td>
+<textarea name="tos_msg" rows="5" cols="40" class="text" readonly=readonly>{{RULES}}</textarea><br />
+<input name="iagree" type="checkbox" value="yes" /><b>{{LANG_AGREE}}</b></td>
 </tr>
-<!-- END rules -->
+{%endif%}
+<tr>
+<td colspan="2" class="ui-widget-content" align="center"><input name="coppavalid" type="checkbox" value="yes" />
+	{%if COPPA == 13%}
+		<strong>{{COPPA_13}}</strong>
+	{%elseif COPPA == 16%}
+		<strong>{{COPPA_16}}</strong>
+	{%elseif COPPA == 18%}
+		<strong>{{COPPA_18}}</strong>
+	{%elseif COPPA == 21%}
+		<strong>{{COPPA_21}}</strong>
+	{%else%}
 
-<!-- START coppa -->
-<tr>
-<td colspan="2" class="ui-widget-content" align="center"><input name="coppavalid" type="checkbox" value="yes" /><b>{COPPA}</b></td>
+	{%endif%}
+</td>
 </tr>
-<!-- END coppa -->
 <tr>
-<td colspan="2" class="ui-widget-header" align="center"><input type="submit" VALUE="{SUBMIT}" class="submit" /></td>
+<td colspan="2" class="ui-widget-header" align="center"><input type="submit" VALUE="{{LANG_REGISTER}}" class="submit" /></td>
 </tr>
 </table>
 </form>
