--- a/trunk/application/views/simple2/viewtopic.twig
+++ b/trunk/application/views/simple2/viewtopic.twig
@@ -14,7 +14,7 @@
 {% else %}
 
 {# can user post a reply?. #}
-{% if CANPOST_REPLY == 1 %}
+{% if CANPOST_REPLY == TRUE %}
 {{URL_TAG("boards/reply/"~TOPICID, IMG("application/views/simple2/images/reply.gif"))|raw}}<br /><br />
 {% endif %}
 
@@ -26,16 +26,33 @@
 
 {# display a poll if present. #}
 {% if TOPIC_TYPE == "Poll" %}
+
+{% if VOTECHECK(LOGGEDUSER, TOPICID) == TRUE or CANVOTE == FALSE or LOGGEDUSER == "guest" %}
 <table border="0" class="table" cellpadding="1" cellspacing="1">
 <tr>
     <td align="center" class="ui-widget-header">{{POLL_QUESTION}}</td>
 </tr><tr>
-    <td align="center" class="ui-widget-content">    
-        {# TODO: add rules for guests, already voted, and non voting rights. #}    
-
-        {% for p in POLLDATA %}
-        <input type="radio" name="vote" value="{{p.option_id}}" />{{p.Poll_Option}}<br />
+    <td align="center" class="ui-widget-content">
+		{% for p in POLLDATA %}		
+			{% if CALC_VOTE(p.option_id, TOPICID) == 0%}
+				<strong>{{p.Poll_Option}}</strong>&nbsp;0%<br /><br />
+			{% else %}
+				<strong>{{p.Poll_Option}}</strong>&nbsp;<img src="{{BOARD_URL}}application/views/simple2/images/bar.gif" width="{{MATH_ROUND(CALC_VOTE(p.option_id, TOPICID) / TOTAL_VOTES * 100)}}" height="10" alt="{{LANG_TOTAL}}: {{CALC_VOTE(p.option_id, TOPICID)}}" title="{{LANG_TOTAL}}: {{CALC_VOTE(p.option_id, TOPICID)}}" />&nbsp;{{MATH_ROUND(CALC_VOTE(p.option_id, TOPICID) / TOTAL_VOTES * 100)}}%<br /><br />
+			{% endif %}
         {% endfor %}
+		<br />&nbsp;&nbsp;&nbsp;{{LANG_TOTAL}}: <b>{{TOTAL_VOTES}}</b>
+    </td>
+</tr>
+</table>
+{% else %}
+<table border="0" class="table" cellpadding="1" cellspacing="1">
+<tr>
+    <td align="center" class="ui-widget-header">{{POLL_QUESTION}}</td>
+</tr><tr>
+    <td align="center" class="ui-widget-content">
+		{% for p in POLLDATA %}
+        <input type="radio" name="vote" value="{{p.option_id}}" />{{p.Poll_Option}}<br />
+        {% endfor %}		
     </td>
 </tr><tr>
     <td align="center" class="ui-widget-content">
@@ -44,23 +61,27 @@
     </td>
 </tr>
 </table>
+{% endif %}
 <br />
 {% endif %}
 
 {# Show these buttons only when the user is an admin or a moderator. #}
 {% if groupAccess == 1 or groupAccess == 2 %}
-	<!-- START move -->
-	{{URL_TAG("maintenance/move/"~TOPICID, IMG("application/views/simple2/images/move.gif"))|raw}}
-	<!-- END move -->
+	{% if GAC_MOVEACL == TRUE %}
+		{{URL_TAG("maintenance/move/"~TOPICID, IMG("application/views/simple2/images/move.gif"))|raw}}
+	{% endif%}
 
-	<!-- START deletetopic -->
-	<a href="#" onclick="confirmDlg('{LANG_DELPROMPT}', '{BOARDDIR}/manage.php?mode=delete&amp;bid={BID}&amp;tid={TID}');return false;"><img src="template/simple2/images/deletetopic.gif" alt="" border="0" /></a>
-	<!-- END deletetopic -->
+	{% if GAC_DELETEACL == TRUE %}
+		<a href="#" onclick="confirmDlg('{LANG_DELPROMPT}', '{BOARDDIR}/manage.php?mode=delete&amp;bid={BID}&amp;tid={TID}');return false;"><img src="template/simple2/images/deletetopic.gif" alt="" border="0" /></a>
+	{% endif%}
 
-	{%if TOPIC_LOCKED == 1 %}
-		{{URL_TAG("maintenance/lock/"~TOPICID, IMG("application/views/simple2/images/unlock.gif"))|raw}}<br />
-	{%else%}
-		{{URL_TAG("maintenance/unlock/"~TOPICID, IMG("application/views/simple2/images/lock.gif"))|raw}}<br />
+	{# see if user can toggle lock. #}
+	{% if GAC_TOGGLELOCKACL == TRUE %}
+		{%if TOPIC_LOCKED == 1 %}
+			{{URL_TAG("maintenance/lock/"~TOPICID, IMG("application/views/simple2/images/unlock.gif"))|raw}}<br />
+		{%else%}
+			{{URL_TAG("maintenance/unlock/"~TOPICID, IMG("application/views/simple2/images/lock.gif"))|raw}}<br />
+		{% endif %}
 	{% endif %}
 
 {% endif %}
@@ -70,13 +91,30 @@
 <td colspan="2" class="ui-widget-header">{{TOPIC_SUBJECT}} - {{LANG_POSTED}}: {{TOPIC_POSTEDON|PostedDate(TimeFormat, TimeZone)}}
 
 <span class="postopt">&nbsp;
-<!-- START viewip -->
-{{LANG_IP}}&nbsp;{{URL_TAG("maintenance/viewip/", TOPIC_IP)|raw}}
-<!-- END viewip -->
+{% if groupAccess == 1 or groupAccess == 2 %}
 
-<!-- START iplogged -->
-{{LANG_IPLOGGED}}&nbsp;
-<!-- END iplogged -->
+	{# see if poster is an admin and logged user is not. #}
+	{% if AUTHOR_GROUPLEVEL == 1 and groupAccess == 2 %}
+		{{LANG_IPLOGGED}}&nbsp;
+	{% else %}
+
+		{# IP Visiblity#}
+		{% if GAC_SEEIP == TRUE %}
+			{{LANG_IP}}&nbsp;{{URL_TAG("maintenance/viewip/", TOPIC_IP)|raw}}
+		{% else %}
+			{{LANG_IPLOGGED}}&nbsp;
+		{% endif%}
+
+		{% if GAC_EDITTOPIC == TRUE %}
+			{{URL_TAG("boards/edittopic/"~TOPICID, IMG("application/views/simple2/images/edit.gif"))|raw}}
+		{% endif%}
+
+		{% if GAC_DELETETOPIC == TRUE %}
+			{{URL_TAG("boards/edittopic/"~TOPICID, IMG("application/views/simple2/images/edit.gif"))|raw}}
+		{% endif%}
+
+	{% endif%}
+{% else %}
 
 <!-- START edit -->
 {{URL_TAG("boards/edittopic/"~TOPICID, IMG("application/views/simple2/images/edit.gif"))|raw}}
@@ -90,6 +128,8 @@
 {{URL_TAG("boards/reply/"~TOPICID, IMG("application/views/simple2/images/quote.gif"))|raw}}
 <!--<a href="Post.php?mode=Reply&amp;bid={BID}&amp;tid={TID}&amp;type=1&amp;quser={AUTHOR}"><img src="template/simple2/images/quote.gif" border="0" alt="" /></a>-->
 <!-- END quote -->
+
+{% endif%}
 </span></td>
 </tr><tr>
 <td width="15%" valign="top" class="ui-widget-header">
